Final edits, handled one off anomolies on card creation and view duplicates

--- a/Unify/Base.lproj/Main.storyboard
+++ b/Unify/Base.lproj/Main.storyboard
@@ -4303,6 +4303,24 @@
             </objects>
             <point key="canvasLocation" x="9690" y="1845"/>
         </scene>
+        <!--Value Selection View Controller-->
+        <scene sceneID="fLZ-dy-q29">
+            <objects>
+                <viewController storyboardIdentifier="PhoneLabelSelectVC" id="CK5-FO-aN5" customClass="ValueSelectionViewController" customModule="Unify" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1Qy-K5-GKK"/>
+                        <viewControllerLayoutGuide type="bottom" id="d8W-VE-V8M"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pUA-6T-jxW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oIG-rq-vlh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="10414" y="1858"/>
+        </scene>
         <!--Hide Profile Data View Controller-->
         <scene sceneID="qHJ-6H-KgP">
             <objects>
